--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
         <div class="social-media">
           Acesse nossas redes sociais
-          <div>
+          <div class="display-social">
             <a
               href="https://www.instagram.com/grupoaliga/"
               style="text-decoration: none"
