--- a/index.html
+++ b/index.html
@@ -18,8 +18,14 @@
       <div class="paralelograma"></div>
       <div class="form-container">
         <div class="title">A LIGA</div>
-        <div class="thanks">
-          OBRIGADO POR PARTICIPAR!!
+        <div class="thanks">OBRIGADO POR PARTICIPAR!!</div>
+        <div>
+          <a href="https://chat.whatsapp.com/Go1fYA1jhjAIebK2rAU8FG">
+            <button class="community-btn">
+              <i class="fa-brands fa-whatsapp" style="color: #ffffff"></i>
+              Faça parte da nosssa comunidade e não perca nada!
+            </button>
+          </a>
         </div>
         <div class="social-media">
           Acesse nossas redes sociais
@@ -40,9 +46,7 @@
             </a>
           </div>
         </div>
-        <div class="copyright">
-            @2023 Izzyapps, all rights reserved
-        </div>
+        <div class="copyright">@2023 Izzyapps, all rights reserved</div>
       </div>
     </div>
   </body>
